--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 @awesome.me:registry=https://npm.fontawesome.com/
 @fortawesome:registry=https://npm.fontawesome.com/
 //npm.fontawesome.com/:_authToken=${FA_TOKEN}
+@jsr:registry=https://npm.jsr.io
