--- a/package.json
+++ b/package.json
@@ -8,26 +8,30 @@
   "private": true,
   "type": "module",
   "prettier": {
-    "plugins": ["prettier-plugin-tailwindcss"]
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   },
   "scripts": {
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "qwik check-client src dist && vite build -c adapters/bun/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+    "drizzle.generate": "deno run -A npm:drizzle-kit generate --config drizzle.config.ts",
+    "drizzle.push": "deno run -A npm:drizzle-kit push --config drizzle.config.ts",
+    "drizzle.studio": "deno run -A npm:drizzle-kit studio --config drizzle.config.ts",
     "fix": "npm run lint.fix && npm run fmt",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "lint.fix": "eslint \"src/**/*.ts*\" --fix",
     "preview": "qwik build preview && vite preview --open",
+    "serve": "bun server/entry.bun.js",
     "start": "vite --open --mode ssr",
-    "drizzle.generate": "deno run -A npm:drizzle-kit generate --config drizzle.config.ts",
-    "drizzle.push": "deno run -A npm:drizzle-kit push --config drizzle.config.ts",
-    "drizzle.studio": "deno run -A npm:drizzle-kit studio --config drizzle.config.ts",
     "qwik": "qwik"
   },
   "devDependencies": {
@@ -35,6 +39,7 @@
     "@builder.io/qwik-city": "^1.18.0",
     "@eslint/js": "latest",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/bun": "*",
     "@types/node": "20.19.0",
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.8",
