--- a/package.json
+++ b/package.json
@@ -35,8 +35,6 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.18.0",
-    "@builder.io/qwik-city": "^1.18.0",
     "@eslint/js": "latest",
     "@tailwindcss/vite": "^4.1.18",
     "@types/bun": "*",
@@ -45,7 +43,7 @@
     "drizzle-kit": "^0.31.8",
     "eslint": "9.32.0",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-qwik": "^1.18.0",
+    "eslint-plugin-qwik": "2.0.0-beta.19",
     "globals": "16.4.0",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.2",
@@ -56,7 +54,9 @@
     "typescript-plugin-css-modules": "latest",
     "undici": "*",
     "vite": "7.2.6",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.2.1",
+    "@qwik.dev/router": "2.0.0-beta.19",
+    "@qwik.dev/core": "2.0.0-beta.19"
   },
   "dependencies": {
     "@3d-dice/dice-box-threejs": "^0.0.12",
