--- a/package.json
+++ b/package.json
@@ -35,34 +35,35 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@eslint/js": "latest",
+    "@eslint/js": "^9.39.2",
+    "@qwik.dev/core": "2.0.0-beta.19",
+    "@qwik.dev/router": "2.0.0-beta.19",
     "@tailwindcss/vite": "^4.1.18",
-    "@types/bun": "*",
-    "@types/node": "20.19.0",
-    "dotenv": "^17.2.3",
+    "@types/bun": "^1.3.8",
+    "@types/node": "25.2.1",
+    "dotenv": "^17.2.4",
     "drizzle-kit": "^0.31.8",
-    "eslint": "9.32.0",
+    "eslint": "9.39.2",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-qwik": "2.0.0-beta.19",
-    "globals": "16.4.0",
-    "prettier": "3.6.2",
+    "globals": "17.3.0",
+    "prettier": "3.8.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "supabase-auth-helpers-qwik": "^0.0.3",
     "tailwindcss": "^4.1.18",
-    "typescript": "5.4.5",
-    "typescript-eslint": "8.38.0",
-    "typescript-plugin-css-modules": "latest",
-    "undici": "*",
-    "vite": "7.2.6",
-    "vite-tsconfig-paths": "^4.2.1",
-    "@qwik.dev/router": "2.0.0-beta.19",
-    "@qwik.dev/core": "2.0.0-beta.19"
+    "type-fest": "^5.4.3",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.54.0",
+    "typescript-plugin-css-modules": "^5.2.0",
+    "undici": "^7.20.0",
+    "vite": "7.3.1",
+    "vite-tsconfig-paths": "^6.0.5"
   },
   "dependencies": {
     "@3d-dice/dice-box-threejs": "^0.0.12",
     "@simplewebauthn/browser": "npm:@jsr/simplewebauthn__browser",
     "@simplewebauthn/server": "npm:@jsr/simplewebauthn__server",
-    "@supabase/supabase-js": "^2.90.1",
+    "@supabase/supabase-js": "^2.95.2",
     "drizzle-orm": "^0.45.1",
     "postgres": "^3.4.8",
     "unique-names-generator": "^4.7.1"
