--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,22 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "target": "ES2020",
-    "module": "ES2022",
-    "lib": ["es2022", "DOM", "WebWorker", "DOM.Iterable"],
-    "jsx": "react-jsx",
-    "jsxImportSource": "@qwik.dev/core",
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "moduleResolution": "Bundler",
     "esModuleInterop": true,
-    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "incremental": true,
     "isolatedModules": true,
-    "outDir": "tmp",
+    "jsx": "react-jsx",
+    "jsxImportSource": "@qwik.dev/core",
+    "lib": ["es2024", "DOM", "WebWorker", "DOM.Iterable"],
+    "module": "es2022",
+    "moduleResolution": "Bundler",
     "noEmit": true,
+    "noUncheckedIndexedAccess": true,
+    "outDir": "tmp",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "es2024",
     "paths": {
       "~/*": ["./src/*"]
     },
